# SportsAnalytics

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  requirements.txt
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 001_initial.py
backend/shared/: database.py  models.py
backend/tests/: test_db.py
docs/: USING_GUIDE.md  performance_report.md
ml/data/: ingest_shuttleset.py
scripts/: run_pipeline.sh
src/app/: globals.css  page.tsx
src/components/: CourtHeatmap.tsx  MatchIngestionPanel.tsx
src/hooks/: useDashboardData.ts
src/pipeline/: database.py  images_to_video.py  main.py  models.py  schemas.py  test_pipeline.py  track_ball.py  video_processor.py
