[project]
name = "badminton-analytics-backend"
version = "0.1.0"
description = "Backend services for Badminton Performance Analytics System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "boto3>=1.34.69",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scikit-learn>=1.4.1.post1",
    "xgboost>=2.0.3",
    "joblib>=1.3.2",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
